--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -1,14 +1,16 @@
 ---
 layout: default
 ---
-<div class="post">
-
-  <header class="post-header">
-    <h1 class="post-title">{{ page.title }}</h1>
-  </header>
-
-  <article class="post-content">
-    {{ content }}
-  </article>
-
+<div class="row">
+    <div class="content">
+        <div class="sheet">
+            <header>
+                <h1>{{ page.title }}</h1>
+            </header>
+            <hr>
+            <article>
+                {{ content }}
+            </article>
+        </div>
+    </div>
 </div>
