--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -2,5 +2,6 @@
   <div class="container">
     <a class="foot-item" href="https://github.com/{{ site.github_username }}" target="_blank"><span class="octicon octicon-mark-github"></span></a>
     <a class="foot-item" href="{{ '/feed.xml' | prepend: site.baseurl | prepend: site.url }}" target="_blank"><span class="octicon octicon-rss"></span></a>
+    &nbsp; &copy; 2014-2015 <a href="http://dspacelabs.com?ref=footer">dSpace Labs LLC</a>
   </div>
 </footer>
