--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -2,6 +2,7 @@
 <html>
 {% include head.html %}
 <script>
+if (0 === document.location.hostname.search("dspacelabs.com")) {
   (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
       (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
     m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
@@ -9,6 +10,7 @@
 
   ga('create', 'UA-51216623-6', 'auto');
   ga('send', 'pageview');
+}
 </script>
 <body>
 <div class="main">
