--- a/_includes/header.html
+++ b/_includes/header.html
@@ -2,15 +2,15 @@
   <nav class="navbar navbar-tiffany rectangle" role="navigation">
     <div class="container">
       <div class="navbar-header">
-        <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
-          <span class="icon-bar"></span>
-          <span class="icon-bar"></span>
-          <span class="icon-bar"></span>
-        </button>
+        <!--<button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">-->
+        <!--  <span class="icon-bar"></span>-->
+        <!--  <span class="icon-bar"></span>-->
+        <!--  <span class="icon-bar"></span>-->
+        <!--</button>-->
         <a class="navbar-brand" href="{{ site.baseurl | prepend: site.url }}/">{{ site.title }}</a>
       </div>
       <div class="collapse navbar-collapse">
-        <ul class="nav navbar-nav navbar-right">
+        <!--<ul class="nav navbar-nav navbar-right">-->
           <!--
           {% for p in site.pages %}{% if p.isNavItem %}
             {% if p.url == page.url %}
@@ -21,7 +21,7 @@
             {% endif %}
           {% endfor %}
           -->
-        </ul>
+        <!--</ul>-->
       </div>
     </div>
   </nav>
