--- a/_includes/header.html
+++ b/_includes/header.html
@@ -2,26 +2,27 @@
   <nav class="navbar navbar-tiffany rectangle" role="navigation">
     <div class="container">
       <div class="navbar-header">
-        <!--<button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">-->
-        <!--  <span class="icon-bar"></span>-->
-        <!--  <span class="icon-bar"></span>-->
-        <!--  <span class="icon-bar"></span>-->
-        <!--</button>-->
-        <a class="navbar-brand" href="{{ site.baseurl | prepend: site.url }}/">{{ site.title }}</a>
+        <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+        </button>
+        <a class="navbar-brand" href="/">{{ site.title }}</a>
       </div>
       <div class="collapse navbar-collapse">
-        <!--<ul class="nav navbar-nav navbar-right">-->
-          <!--
-          {% for p in site.pages %}{% if p.isNavItem %}
-            {% if p.url == page.url %}
-              <li class="active">{% else %}
-                <li>{% endif %}
-                  <a href="{{ p.url | prepend: site.baseurl | prepend: site.url }}" class="word-keep"><span class="octicon {{ p.icon }}"></span>&nbsp;&nbsp;{{ p.title }}</a>
-                </li>
-            {% endif %}
-          {% endfor %}
-          -->
-        <!--</ul>-->
+        <ul class="nav navbar-nav navbar-right">
+          <li class="dropdown">
+            <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Libraries <span class="caret"></span></a>
+            <ul class="dropdown-menu">
+              <li><a href="/Cache">Cache</a></li>
+              <li><a href="/Common">Common</a></li>
+              <li><a href="/Feature">Feature</a></li>
+              <li><a href="/Filesystem">Filesystem</a></li>
+              <li><a href="/Math">Math</a></li>
+              <li><a href="/Queue">Queue</a></li>
+            </ul>
+          </li>
+        </ul>
       </div>
     </div>
   </nav>
