--- a/_includes/header.html
+++ b/_includes/header.html
@@ -2,6 +2,7 @@
   <div class="mt2 wrap">
     <div class="measure">
       <a href="{{ site.baseurl }}/" class="site-title">{{ site.title }}</a>
+      <span class="site-title">&nbsp;&nbsp;/</span>
       <nav class="site-nav">
         {% include navigation.html %}
       </nav>
