updating and adding things

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,4 +1,7 @@
 <footer class="center">
   <div class="measure">
+    <small>
+      Copyright &copy; 2016 dSpace Labs LLC
+    </small>
   </div>
 </footer>
