--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -1,6 +1,2 @@
-<a href="{{ site.baseurl }}/common/">Common</a>
-<a href="{{ site.baseurl }}/filesystem/">Filesystem</a>
-<a href="{{ site.baseurl }}/cache/">Cache</a>
-<a href="{{ site.baseurl }}/math/">Math</a>
-<a href="{{ site.baseurl }}/feature/">Feature</a>
-<a href="{{ site.baseurl }}/queue/">Queue</a>
+<a href="{{ site.baseurl }}/open-source.html">Open-Source</a>
+<a href="{{ site.baseurl }}/support/">Support</a>
